--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
   "name": "plugin_name",
   "version": "0.0.0",
-  "description": "PostHTML plugin description",
-  "license": "MIT",
+	"description": "PostHTML plugin description",
+	"license": "MIT",
   "repository": "USER_NAME/PLUGIN_NAME",
   "author": "USER_NAME",
-  "main": "lib",
-  "engines": {
-    "node": ">=10"
-  },
-  "scripts": {
-    "version": "conventional-changelog -i changelog.md -s -r 0 && git add changelog.md",
-		"test": "xo && nyc ava"
-  },
-  "keywords": [
-    "html",
-    "posthtml",
-    "posthtml-plugin"
-  ],
+	"main": "lib",
+	"engines": {
+		"node": ">=10"
+	},
+	"scripts": {
+		"version": "conventional-changelog -i changelog.md -s -r 0 && git add changelog.md",
+		"test": "xo && nyc ava",
+		"lint": "xo",
+		"lintFix": "xo --fix"
+	},
+	"keywords": [
+		"html",
+		"posthtml",
+		"posthtml-plugin"
+	],
 	"dependencies": {
 		"ssri": "^8.0.0"
 	},
-  "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-angular": "^11.0.0",
-    "ava": "^3.13.0",
-    "conventional-changelog-cli": "^2.0.31",
-    "husky": "^4.3.0",
-    "nyc": "^15.1.0",
-    "posthtml": "^0.13.3",
+	"devDependencies": {
+		"@commitlint/cli": "^11.0.0",
+		"@commitlint/config-angular": "^11.0.0",
+		"ava": "^3.13.0",
+		"conventional-changelog-cli": "^2.0.31",
+		"husky": "^4.3.0",
+		"nyc": "^15.1.0",
+		"posthtml": "^0.13.3",
 		"prettier": "^2.1.2",
-    "xo": "^0.33.1"
-  }
+		"xo": "^0.33.1"
+	}
 }
