--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "posthtml-sri",
 	"version": "1.0.1",
-	"description": "PostHTML plugin description",
+	"description": "PostHTML subresource integrity plugin",
 	"license": "MIT",
 	"repository": "https://gitlab.com/abogical/posthtml-sri",
 	"homepage": "https://gitlab.com/abogical/posthtml-sri",
