ci: set renovate bot to commit in the conventional style

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,5 +1,7 @@
 {
 	"extends": ["config:base", "schedule:earlyMondays"],
+	"commitMessagePrefix": "build: ",
+	"commitMessageAction": "update",
 	"packageRules": [{
 			"packagePatterns": [
 				"*"
