--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,4 +11,4 @@ test:
     - npm t
   parallel:
     matrix:
-      - NODE_VERSION: [10, 11, 12, 13, 14]
+      - NODE_VERSION: [10, 11, 12, 13, 14, 15]
