--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,5 +1,5 @@
 {
-	"extends": ["config:base", "schedule:earlyMondays"],
+	"extends": ["config:js-lib", "schedule:earlyMondays"],
 	"commitMessagePrefix": "build: ",
 	"commitMessageAction": "update",
 	"packageRules": [{
