--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"scripts": {
 		"build": "tsc",
 		"version": "conventional-changelog -i changelog.md -s -r 0 && git add changelog.md",
-		"test": "xo && nyc ava",
+		"test": "tsc && xo && nyc ava",
 		"lint": "xo",
 		"lintFix": "xo --fix"
 	},
