refactor: upgrade dependencies and use native Node.js fetch
Node.js fetch was introduced in NodeJS version 21, eliminating the need for the `node-fetch` NPM dependency.

See <https://nodejs.org/en/blog/announcements/v21-release-announce#stable-fetchwebstreams> for more details.

Dependencies were upgraded as part of the move to Node v21. Some configurations had to be adjusted for this.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "outDir": "./dist",
 	"declaration": true,
-    "target": "es2015",
+    "target": "es2022",
 	"moduleResolution": "node",
 	"module": "commonjs",
-	"esModuleInterop": true
+	"esModuleInterop": true,
+	"strictNullChecks": true
   },
   "include": ["./src/**/*"]
 }
