--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	],
 	"main": "dist",
 	"engines": {
-		"node": ">=10"
+		"node": ">=21"
 	},
 	"scripts": {
 		"build": "tsc",
@@ -29,20 +29,20 @@
 		"security"
 	],
 	"dependencies": {
-		"node-fetch": "^2.6.1",
-		"ssri": "^8.0.0"
+		"ssri": "^12.0.0"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^11.0.0",
-		"@commitlint/config-angular": "^11.0.0",
-		"@types/node-fetch": "^2.5.12",
-		"ava": "^3.13.0",
-		"conventional-changelog-cli": "^2.0.31",
-		"husky": "^4.3.0",
-		"nyc": "^15.1.0",
-		"posthtml": "^0.13.3",
-		"prettier": "^2.1.2",
-		"typescript": "^3.9.7",
-		"xo": "^0.33.1"
+		"@commitlint/cli": "^19.5.0",
+		"@commitlint/config-angular": "^19.5.0",
+		"@types/node": "^22.7.5",
+		"@types/ssri": "^7.1.5",
+		"ava": "^6.1.3",
+		"conventional-changelog-cli": "^5.0.0",
+		"husky": "^9.1.6",
+		"nyc": "^17.1.0",
+		"posthtml": "^0.16.6",
+		"prettier": "^3.3.3",
+		"typescript": "^5.6.3",
+		"xo": "^0.59.3"
 	}
 }
